--- a/config.development.json
+++ b/config.development.json
@@ -7,7 +7,7 @@
   "database": {
     "client": "sqlite3",
     "connection": {
-      "filename": "D:\\TriDM16\\SourceCode\\GhostCMS\\content\\data\\ghost-local.db"
+      "filename": "./content/data/ghost-local.db"
     }
   },
   "mail": {
@@ -21,6 +21,6 @@
   },
   "process": "local",
   "paths": {
-    "contentPath": "D:\\TriDM16\\SourceCode\\GhostCMS\\content"
+    "contentPath": "./content"
   }
 }
